Updated about page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2005,6 +2005,8 @@ input, select, textarea {
 			background: #e97770 url("images/overlay.png");
 			color: #eee;
 			color: rgba(255, 255, 255, 0.75);
+			text-align: justify;
+
 		}
 
 			.wrapper.style1 .title {
