--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1672,7 +1672,7 @@ input, select, textarea {
 		input[type="reset"].style1,
 		button.style1,
 		.button.style1 {
-			background: #e97770 url("images/overlay.png");
+			background: #E35435 url("images/overlay.png");
 			color: #fff;
 		}
 
@@ -1850,7 +1850,7 @@ input, select, textarea {
 		}
 
 		.feature-list h3 {
-			color: #e97770 !important;
+			color: #E35435 !important;
 			margin: -0.35em 0 0.75em 0;
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
@@ -2002,7 +2002,7 @@ input, select, textarea {
 			}
 
 		.wrapper.style1 {
-			background: #e97770 url("images/overlay.png");
+			background: #E35435 url("images/overlay.png");
 			color: #eee;
 			color: rgba(255, 255, 255, 0.75);
 			text-align: justify;
@@ -2010,7 +2010,7 @@ input, select, textarea {
 		}
 
 			.wrapper.style1 .title {
-				background: #e97770 url("images/overlay.png");
+				background: #E35435 url("images/overlay.png");
 				color: #fff;
 			}
 
@@ -2063,7 +2063,7 @@ input, select, textarea {
 		justify-content: center;
 		position: relative;
 		height: 24em;
-		background: url("../../images/banner.jpg") center center;
+		background: #111111;
 		background-size: cover;
 		padding: 0;
 	}
@@ -2264,10 +2264,11 @@ input, select, textarea {
 	}
 
 		#highlights .highlight h3 {
-			color: #e97770;
+			color: #E35435;
 			margin: 0 0 0.75em 0;
 			font-size: 1.15em;
 			letter-spacing: 0.05em;
+			font-size: 25px;
 		}
 
 /* Main */
@@ -2275,7 +2276,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #282b34 url("images/overlay.png");
+		background: #111111;
 		color: #eee;
 		color: rgba(255, 255, 255, 0.5);
 		padding-bottom: 6em;
@@ -2342,7 +2343,7 @@ input, select, textarea {
 			}
 
 		#footer .title {
-			background: #282b34 url("images/overlay.png");
+			background: #111111;
 			color: #eee;
 		}
 
@@ -2894,7 +2895,7 @@ input, select, textarea {
 				#logo h1 {
 					font-size: 1.5em;
 					letter-spacing: 0.2em;
-					font-family:cursive;
+					font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 				}
 
 				#logo h2 {
