--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2075,7 +2075,7 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background: url("images/overlay.png");
+			background: #111111;
 		}
 
 		.homepage #header {
@@ -2165,7 +2165,7 @@ input, select, textarea {
 				}
 
 	.dropotron {
-		background: #222835 url("images/overlay.png");
+		background: #111111;
 		background-color: rgba(44, 50, 63, 0.925);
 		padding: 1.25em 1em 1.25em 1em;
 		border-radius: 0.35em;
