Updated resume download button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1783,7 +1783,7 @@ input, select, textarea {
 			  .btn-complete {
 				padding: 10px;
 				width: 50px;
-				color: #fff;
+				color: #E35435;
 				pointer-events: none;
 			  }
 			  
