--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900");
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700,300");
 
 /*
 	Escape Velocity by HTML5 UP
@@ -1742,69 +1743,6 @@ input, select, textarea {
 			.button.style3:active {
 				background-color: #1f232b;
 			}
-			.btn {
-				background: transparent;
-				width: 200px;
-				position: relative;
-				padding: 15px;
-				color: #E35435;
-				cursor: pointer;
-				text-align: center;
-				text-transform: uppercase;
-				letter-spacing: 3px;
-				transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-				border-radius: 4px;
-				font-weight: 600;
-				overflow: hidden;
-				border: 2px solid #E35435;
-				text-decoration: none;
-			  }
-			  
-			  /* In Progress Button */
-			  .btn-progress {
-				width: 500px;
-				color: transparent;
-			  }
-			  
-			  .btn-fill:after {
-				content: '';
-				background: #E35435;
-				position: absolute;
-				top: 0; left: 0;
-				height: 100%;
-				width: 100%;
-				transform: scaleX(0);
-				transform-origin: 0;
-				display: block;
-				animation: fill 3.2s linear forwards;
-			  }
-			  
-			  /* Button Complete */
-			  .btn-complete {
-				padding: 10px;
-				width: 50px;
-				color: #E35435;
-				pointer-events: none;
-			  }
-			  
-			  .btn-complete:after {
-				content: "\2713";
-				color: #fff;
-				height: 100%;
-				padding-left: 3px;
-				position: absolute;
-				top: 0; left: 0; right: 0;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				background: #E35435;
-			  }
-			  
-			  /* Animation */
-			  @keyframes fill {
-				from { transform: scaleX(0); }
-				to { transform: scaleX(1); }
-			  }
 		
 
 /* List */
@@ -3057,4 +2995,20 @@ input, select, textarea {
 
 	}
 
-	
+	.btn {
+		background-color: #E35435;
+		border: none;
+		color: #fff;
+		padding: 12px 30px;
+		cursor: pointer;
+		font-size: 20px;
+		font-weight: bold;
+		border-radius: 100px;
+		width: auto;
+		font-family: Nunito;
+	  }
+	  
+	  /* Darker background on mouse-over */
+	  .btn:hover {
+		background-color: #222222;
+	  }
