--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1656,7 +1656,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #f98780;
+			background-color: #C13619;
 		}
 
 		input[type="button"].large,
@@ -1682,7 +1682,7 @@ input, select, textarea {
 			input[type="reset"].style1:hover,
 			button.style1:hover,
 			.button.style1:hover {
-				background-color: #f98780;
+				background-color: #C13619;
 			}
 
 			input[type="button"].style1:active,
@@ -1690,7 +1690,7 @@ input, select, textarea {
 			input[type="reset"].style1:active,
 			button.style1:active,
 			.button.style1:active {
-				background-color: #d96760;
+				background-color: #E35435;
 			}
 
 		input[type="button"].style2,
@@ -3004,8 +3004,9 @@ input, select, textarea {
 		font-size: 20px;
 		font-weight: bold;
 		border-radius: 100px;
-		width: auto;
+		width: 100%;
 		font-family: Nunito;
+
 	  }
 	  
 	  /* Darker background on mouse-over */
